# meeting_transcript

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  security.yml
docs/: build-linux.md  build-macos.md  build-windows.md  run-linux.md  run-macos.md  run-windows.md
packaging/: MeetingMojiokoshi.spec
requirements/: constraints.txt
scripts/: build_desktop.py  package_release.py  smoke_desktop.py
src/meeting_mojiokoshi/: __init__.py  __main__.py  app.py  audio.py  config.py  models.py  secure_fs.py  session.py  transcriber.py
tests/: test_audio.py  test_config.py  test_models.py  test_secure_fs.py  test_session.py  test_transcriber.py
